--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "angular-rxjs-ngrx",
-    "displayName": "ES7 Angular/NgRx/RxJs Snippets",
-    "description": "A collection of usefull snippets for angular developers",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.51.0"
-    },
-    "categories": [
-        "Snippets"
-    ],
-    "contributes": {
-        "snippets": [
-            {
-                "language": "typescript",
-                "path": "./snippets/snippets.code-snippets"
-            }
-        ]
-    }
+  "name": "angular-rxjs-ngrx",
+  "displayName": "Typescript Angular/RxJs/NgRx Snippets",
+  "description": "A collection of usefull snippets for angular developers",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.51.0"
+  },
+  "categories": [
+    "Snippets"
+  ],
+  "contributes": {
+    "snippets": [
+      {
+        "language": "typescript",
+        "path": "./snippets/snippets.code-snippets"
+      }
+    ]
+  }
 }
