--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-rxjs-ngrx",
   "displayName": "Typescript Angular/RxJs/NgRx Snippets",
-  "description": "A collection of usefull snippets for angular developers",
-  "version": "1.0.2",
+  "description": "A collection of usefull snippets for angular developers, including some snippets for NgRx, NgRx component store, cypress, angular material, todo tree and much more",
+  "version": "1.1.0",
   "engines": {
     "vscode": "^1.51.0"
   },
@@ -26,6 +26,21 @@
       {
         "language": "html",
         "path": "./snippets/material-html.json"
+      },
+      {
+        "language": "typescript",
+        "path": "./snippets/cypress.json"
+      },
+      {
+        "language": "html",
+        "path": "./snippets/cypress-html.json"
+      },
+      {
+        "language": "typescript",
+        "path": "./snippets/ngrx-component-store.json"
+      },
+      {
+        "path": "./snippets/todo.code-snippets"
       }
     ]
   },
